Fixed Pac-Man command by renaming the HeadIcon file

--- a/tec-xx.csproj
+++ b/tec-xx.csproj
@@ -167,7 +167,7 @@
     <None Update="HeadIcons\OlimarHeadSSBUWebsite.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="HeadIcons\Pac-ManHeadSSBUWebsite.png">
+    <None Update="HeadIcons\PacManHeadSSBUWebsite.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="HeadIcons\PalutenaHeadSSBUWebsite.png">
