Updated nuget package

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 ***REMOVED***
-***REMOVED***
+  "token": "NzQ0Njc3MDMzMDc3ODk5MzA0.XzmsiA.UhApuHcejR7HXqBPny74sdFewwA",
 ***REMOVED***
   "ConnectionStrings": ***REMOVED***
 ***REMOVED***
